fixed ending on mobile

--- a/2025/09/26/brown-harvard/styles.css
+++ b/2025/09/26/brown-harvard/styles.css
@@ -481,6 +481,10 @@ a {
         height: 25vh;
     }
 
+    #needsMoreHeight {
+        height: 120vh;
+    }
+
     body {
         background-image: none !important;
     }
